--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 
 body {
     background: #081b29;
+    color: #ededed;
+
 }
 
 .header {
@@ -17,7 +19,7 @@ body {
     left: 0;
     width: 100%;
     padding: 20px 10%;
-    background:  yellowgreen;
+    background:  transparent;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -38,4 +40,50 @@ body {
     text-decoration: none;
     font-weight: 500;
     margin-left: 35px;
+    transition: .3s;
+}
+
+.navbar a:hover,
+.navbar a.active {
+    color: #00abf0;
+}
+
+.home {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    padding: 0 10%; 
+}
+
+.home-content {
+    max-width: 600px;
+}
+
+.home-content h1 {
+    font-size: 56px;
+    font-weight: 700;
+}
+
+.home-content h3 {
+    font-size: 32px;
+    font-weight: 600;
+    color: #00abf0;
+}
+
+.home-content p {
+    font-size: 16px;
+}
+
+.home-content .btn-box {
+    width: 345px;
+    height: 50px;
+    background: yellowgreen;
+}
+
+.btn-box a {
+    width: 150px;
+    height: 100%;
+    background: #00abf0;
+    border: 2px solid #00abf0;
+    border-radius: 8px;
 }
