--- a/style.css
+++ b/style.css
@@ -11,8 +11,6 @@
 body {
     background: #081b29;
     color: #ededed;
-    
-
 }
 
 .header {
@@ -52,7 +50,7 @@ body {
 
 .home {
     height: 100vh;
-    background: url('ProfilePic1.jpg') no-repeat;
+    /* background: url('ProfilePic1.jpg') no-repeat; */
     display: flex;
     align-items: center;
     padding: 0 10%; 
@@ -185,13 +183,23 @@ body {
     width: 100%;
 }
 
-.home-imgHover {
+/* .home-imgHover {
     position: absolute;
     top: 0;
     right: 30px;
     width:500px;
     height: 100%;
     background: transparent;
-    border: 2px solid red;
-    z-index: -1;
+    transition: 3s;
+}
+
+.home-imgHover:hover {
+    background: #081b29;
+    opacity: .8;
+} */
+
+.imgProp {
+    opacity: .2;
+    position: absolute;
+    left: 0px;
 }
