--- a/style.css
+++ b/style.css
@@ -201,6 +201,6 @@ body {
 .imgProp {
     opacity: 20%;
     position: absolute;
-    left: 0px;
-    bottom: 0px;
+    left: 0%;
+    bottom: 0%;
 }
