--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
     color: #ededed;
     text-decoration: none;
     font-weight: 600;
-
+    z-index: 1;
 }
 
 .logo::before {
@@ -43,8 +43,12 @@ body {
     width: 100%;
     height: 100%;
     background: #091c27;
-    animation: showRight 1s ease forwards;
+    animation: showRight 0.6s ease forwards;
     animation-delay: .4s;
+}
+
+.navbar {
+    margin-left: 20px;
 }
 
 .navbar::before {
@@ -56,7 +60,7 @@ body {
     height: 100%;
     background: #091c27;
     animation: showRight 2s ease forwards;
-    animation-delay: 1s;
+    animation-delay: 1.35s;
 }
 
 .navbar a {
@@ -295,6 +299,7 @@ body {
     position: absolute;
     left: 0%;
     bottom: 0%;
+    background: transparent;
     overflow: hidden;
 }
 
