--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
     height: 100%;
     background: #091c27;
     animation: showRight 2s ease forwards;
-    animation-delay: 1.35s;
+    animation-delay: 0.5s;
 }
 
 .navbar a {
@@ -324,25 +324,29 @@ body {
     overflow: hidden;
 }
 
-.about {
+.about, .portfolio, .contacts {
     height: 100vh;
     display: flex;
-    padding: 0 10%;
-    align-items: center;
+    padding: 5% 10%;
+    justify-content: center;
 }
 
 .about-content {
+    align-items: center;
     max-width: 800px;
-}
-
-.about-content h1 {
-    color: #00abf0;
-    padding: 30px 0px;
 }
 
 .about-content p {
     padding: 10px 0px;
 }
+
+.heading {
+    text-align: center;
+    font-size: 3.5rem;
+    color: #00abf0;
+}
+
+
 
 /* KEYFRAMES ANIMATION */
 @keyframes showRight {
