--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
     top: 0;
     left: 20%;
     width: 80%;
-    height: 100%;
+    height: 80%;
     background: #091c27;
     animation: showRight 2s ease forwards;
     animation-delay: 0.5s;
@@ -327,13 +327,16 @@ body {
 .about, .portfolio, .contacts {
     height: 100vh;
     display: flex;
-    padding: 5% 10%;
+    padding: 80px 10%;
     justify-content: center;
 }
 
 .about-content {
     align-items: center;
-    max-width: 800px;
+    max-width: 60vw;
+    margin-top: 20vh;
+    overflow-x: hidden;
+    scrollbar-width: thin;
 }
 
 .about-content p {
@@ -341,12 +344,45 @@ body {
 }
 
 .heading {
+    position: absolute;
     text-align: center;
+    height: 10vh;
     font-size: 3.5rem;
     color: #00abf0;
 }
 
+.project-group {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 10vh;
+    max-width: 80vw;
+    justify-content: center;
+    padding: 20px 20px;
+    overflow-x: hidden;
+    scrollbar-width: thin;
+    
+}
 
+.project-group img {
+    width: 300px;
+    height: 200px;
+}
+
+.portfolio-project {
+    width: 300px;
+    height: 260px;
+    margin: auto;
+    min-width: 320px;
+}
+
+.portfolio-project a {
+    text-decoration: none;
+}
+
+.portfolio-project h2 {
+    color: #fff;
+    font-size: 1.5rem;
+}
 
 /* KEYFRAMES ANIMATION */
 @keyframes showRight {
