--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ body {
 .home-sci {
     position: absolute;
     bottom: 40px;
-    width: 100px;
+    width: 150px;
     display: flex;
     justify-content: space-between;
 }
@@ -324,7 +324,7 @@ body {
     overflow: hidden;
 }
 
-.about, .portfolio, .contacts {
+.about, .portfolio, .contact {
     height: 100vh;
     display: flex;
     padding: 80px 10%;
@@ -382,6 +382,11 @@ body {
 .portfolio-project h2 {
     color: #fff;
     font-size: 1.5rem;
+}
+
+.contact .contact-box {
+    margin:auto;
+    padding:auto;
 }
 
 /* KEYFRAMES ANIMATION */
